# linkori

./: .gitignore  LICENSE  README.ja.md  README.md  package-lock.json  package.json
docs/: backend.html  codebase.html  codebase.yaml  coderikkai.html  index.html  refactor-phase1.md  refactor-phase2.md  refactor-phase3.md  refactor-phase4.md  refactor-phase5.md  sitemap.xml  styles.css
docs/src/: app.jsx  atoms.jsx  copy.jsx  hero.jsx  hooks.jsx  sections.jsx  tweaks.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: chunk.rs  filesystem.rs  image.rs  mod.rs  validate_image_file.rs
src-tauri/src/commands/filesystem/: archive.rs  directory.rs  helpers.rs  meta.rs  mod.rs
src-tauri/src/protocol/: manga.rs
src-tauri/src/reader/: directory.rs  mod.rs  zip.rs
src-tauri/src/utils/: encoding.rs  mod.rs  paths.rs  sorting.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ImageFilePicker.tsx
src/components/playlist/: ChunkCard.tsx  ChunkForm.tsx  FileBrowserDialog.tsx  FileBrowserIcons.tsx  FileGridCard.tsx  FileRow.tsx  PlaylistPanel.tsx  SortableChunkList.tsx  (+3 more)
src/hooks/: useChunkImages.ts  useDeleteUndo.ts  useFileThumbnail.ts  usePersistence.ts  useSplitUndo.ts  useT.ts
src/lib/: chunkOrder.test.ts  chunkOrder.ts  cn.test.ts  constants.ts  dragDrop.ts  i18n.ts  mangaUrl.test.ts  mangaUrl.ts  paths.ts  pdf.test.ts  pdf.ts  tauri.ts
src/stores/: playlistStore.ts  settingsStore.ts  viewerStore.ts
src/types/: index.ts
(+7 files in other folders)
