[package]
name = "linkori"
version = "0.4.0"
description = "A manga reader with playlist and chunk linking"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
zip = "2.4.2"
natord = "1.0"
walkdir = "2.5"
base64 = "0.22"
mime_guess = "2.0"
uuid = { version = "1.0", features = ["v4"] }
percent-encoding = "2.3"
urlencoding = "2.1"
imagesize = "0.13"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
encoding_rs = "0.8"
